@@ -1,3 +1,11 @@
+stealth (2.04.00)
+  
+  * Added detection of invalid child process command texts: commands not
+    resulting in an exit value are considered invalid and terminate Stealth.
+    (scanner/testexitvalue.cc)
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 03 Jun 2012 10:12:16 +0200
+
 stealth (2.03.00)
   
   * Spurious [Fatal] message when starting stealth are prevented
